@@ -9,6 +9,7 @@ LINK_DIRECTORIES (${LUA_LIB_DIR})
 
 ADD_SUBDIRECTORY(ModuleLoader)
 ADD_SUBDIRECTORY(sgtLuna)
+ADD_SUBDIRECTORY(lua_core)
 ADD_SUBDIRECTORY(lunagen)
 
 # ADD_SUBDIRECTORY(template_launcher)
